assets/css/custom.css
/* This is for the bio text on the landing page. */
.bio-text {
    max-width: 680px;
    text-align: justify;
    /*text-indent: 10%;*/
}

/* This is for the "my research" section. */
.blox-markdown .prose {
    text-align: justify;
    font-size: 1rem;
}

/* This is for the abstracts of events. */
.max-w-prose.grid.grid-cols-1.md\:grid-cols-\[200px_auto\].gap-4.my-6 {
    text-align: justify;
}

/* This is to make the skills capitalized and not uppercased. */
.skills-name {
    margin-bottom: 6px;
    /* color: #888; */ /* Inaccessible */
    font-size: 1rem;
    letter-spacing: 1px;
    text-transform: none;
  }
  
  #profile > div.avatar-wrapper > img {
    position: relative;
    display: flex;
    max-height: 600px;
    max-width: 600px;
    right: 0px;
  }

  .avatar-wrapper {
    position: relative;
    width: 300px;
    height: 300px;
    margin-left: auto;
    margin-right: auto;
}
  

